my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ENAMEID/T_ENAMEID-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENAMEID_STRUCT_H
#define T_ENAMEID_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_ENAMEID(void);


#endif /* not T_ENAMEID_STRUCT_H */
